# rcedit-rs

./: Cargo.toml
rcedit-sys/: Cargo.toml
rcedit-sys/src/: lib.rs  librcedit.cpp
src/: lib.rs
tests/: patching.rs
