[package]
name = "rcedit"
version = "0.1.0"
authors = ["Vladislav Nikonov <nikonov.vladislav@apriorit.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
rcedit-sys = { path = "rcedit-sys" }
thiserror = "1.0"
widestring = "0.5"
